--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           <span class="iconify" data-icon="fa-brands:linkedin"></span>LinkedIn
         </a>
 
-        <a href="https://wa.me/01000620513" class="link whatsapp" target="_blank" rel="noopener">
+        <a href="https://wa.me/+201000620513" class="link whatsapp" target="_blank" rel="noopener">
           <span class="iconify" data-icon="bi:whatsapp"></span>
           Whatsapp
         </a>
 
-        <a href="https://mywebsite.com" class="link website" target="_blank" rel="noopener">
+        <button class="link website button">
           <span class="iconify" data-icon="bi:globe"></span>
           My Website
-        </a>        
+        </button>        
         
         <a href="https://instagram.com/karim_wael02" class="link instagram" target="_blank" rel="noopener">
           <span class="iconify" data-icon="fa-brands:instagram"></span>
